# znote-mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  SPEC_ORGANIZATION_CONFIG.md  SPEC_ZK_CONFIGURE_PROJECTS.md  SPEC_ZK_REORGANIZE_OBSIDIAN.md  agent_report_1_unit_test_quality.md  agent_report_2_e2e_coverage.md  agent_report_3_integration_test.md  agent_report_4_mock_audit.md  alembic.ini  pyproject.toml  setup.py
.github/workflows/: ci.yml
alembic/: README  env.py
benchmarks/: summary.csv
docs/: MODEL_SELECTION.md  PHASE_5_6_FIXES.md  PHASE_7_HARDENING.md  PHASE_8_AGENT_FINDINGS.md  PHASE_9_IMPLEMENTATION_PLAN.md  REMOTE_SYNC_ARCHITECTURE.md  TOON_DESIGN.md
scripts/: benchmark_embed.py  benchmark_quality.py  benchmark_rerank.py  create_sample.py  generate-docs.sh  handcrafted_queries.json  migrate-projects.py  model_configs.py  reindex_benchmark.py  reranker_configs.py  run_full_benchmark.sh  smoke_test_rerankers.py  sync-to-obsidian  sync-to-obsidian.py  toon_token_simulation.py
tests/: conftest.py  conftest_e2e.py  conftest_protocol.py  fakes.py  test_aimd.py  test_backup_workflows.py  test_bug_fixes.py  test_bulk_operations.py  test_chunked_embedding_integration.py  test_circuit_breaker.py  test_concurrency.py  test_config_cleanup.py  test_database_hardening.py  test_e2e.py  test_e2e_workflows.py  test_embedding_phase1.py  test_embedding_phase2.py  test_embedding_phase3.py  test_embedding_phase4.py  test_embedding_phase5.py  test_error_injection.py  test_failure_recovery.py  test_git_sync_service.py  test_git_wrapper.py  test_hardware.py  test_hybrid_search.py  test_import_notes.py  test_integration.py  test_mcp_integration.py  test_mcp_protocol.py  test_mcp_resilience_protocol.py  test_mcp_server.py  test_mcp_tools_integration.py  test_migration_and_versioning.py  test_models.py  test_multiprocess_concurrency.py  test_note_repository.py  test_observability.py  test_obsidian_enhancements.py  test_performance_baselines.py  (+11 more)
(+250 files in other folders)
